--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,13 +1,11 @@
-doctype html
-html(lang='en')
+doctype
+html
   head
-    meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width')
     title= title
-    block css
-      link(rel='stylesheet', href='/css/style.css')
-    block js
-      if ENV_DEVELOPMENT
-        script(src='http://localhost:35729/livereload.js')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
+    script(src='/bootstrap/js/bootstrap.min.js')
   body
     block content
